# data-standardization

./: README.md
data-standardization/: requirements.txt
data-standardization/data-standard_and_normal/: Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data-standardization/data-standard_and_normal/api/: index.py  main.py  standardize.py
data-standardization/data-standard_and_normal/config/: category_mappings.yaml  column_mappings.yaml  currency_mappings.yaml  fallback_rules.yaml  settings.yaml  source_profiles.yaml
data-standardization/data-standard_and_normal/data/reports/: bank_statement.csv  expenses.csv  invoices.csv  payroll.csv  tally.csv
data-standardization/data-standard_and_normal/scr/:  column_mapper.py   schemas.py   value_normalizer.py  fallback_handler.py  mapping_loader.py  output_writer.py  source_resolver.py  utils.py
data-standardization/data-standard_and_normal/scripts/: run_standardization.py
data-standardization/data-standard_and_normal/tests/:  test_fallback_handler.py  test_column_mapper.py  test_end_to_end.py  test_value_normalizer.py
