[project]
name = "fintech-data-platform"
version = "0.1.0"
description = "Production-grade financial data pipeline"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

